// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Box 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kgPSDa"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a background colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 djsAXX"
      color="white"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a responsive width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 iSqypz"
      width="[object Object]"
    >
      Full width on extra small screens, 1/2 width on small and 1/4 width on medium
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a set width 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kPpbia"
      width="0.5"
    >
      Half Width
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a shadow 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 jdHklY"
    >
      Small shadow
    </div>
    <div
      class="Box-sc-1qu1edy-0 iwQDQA"
    >
      Medium shadow
    </div>
    <div
      class="Box-sc-1qu1edy-0 hfKkLc"
    >
      Large shadow
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With a text colour 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 dgiJtr"
      color="blue"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With margin 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kgPSDa"
    >
      <div
        class="Box-sc-1qu1edy-0 hIhzoq"
      >
        Margin
      </div>
      <div
        class="Box-sc-1qu1edy-0 cuoOre"
      >
        Margin top
      </div>
      <div
        class="Box-sc-1qu1edy-0 dtHOjp"
      >
        Margin right
      </div>
      <div
        class="Box-sc-1qu1edy-0 ilVHVE"
      >
        Margin bottom
      </div>
      <div
        class="Box-sc-1qu1edy-0 haXiZu"
      >
        Margin left
      </div>
      <div
        class="Box-sc-1qu1edy-0 hwRFIK"
      >
        Margin x
      </div>
      <div
        class="Box-sc-1qu1edy-0 cFAHtp"
      >
        Margin y
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Box With padding 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 edIMFr"
  >
    <div
      class="Box-sc-1qu1edy-0 kXqRXb"
    >
      <div
        class="Box-sc-1qu1edy-0 DrAYC"
      >
        Padding
      </div>
      <div
        class="Box-sc-1qu1edy-0 DrAYC"
      >
        Padding top
      </div>
      <div
        class="Box-sc-1qu1edy-0 iNWRjl"
      >
        Padding right
      </div>
      <div
        class="Box-sc-1qu1edy-0 fsPHko"
      >
        Padding bottom
      </div>
      <div
        class="Box-sc-1qu1edy-0 gibXYK"
      >
        Padding left
      </div>
      <div
        class="Box-sc-1qu1edy-0 chUAKr"
      >
        Padding x
      </div>
      <div
        class="Box-sc-1qu1edy-0 bwmKJe"
      >
        Padding y
      </div>
    </div>
  </div>
</div>
`;
